# openeo-cwl

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/app/CWL_FILES/: hydromt-ades
app/cwl/: parser.py
app/db/: cwl.db  database.py
app/models/: cwl.py  healthcheck.py  processes.py
tests/: test_main.py
