[tool.poetry]
name = "openeo-cwl"
version = "0.0.1"
description = "OpenEO CWL execution service based on cwltool"
authors = ["Juraj Zvolensky"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
cwltool = "^3.1.20240404144621"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
pytest = "^8.1.1"
httpx = "^0.27.0"
pyyaml = "^6.0.1"
ruamel-yaml = "^0.18.6"
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
